# project-forge

./: .editorconfig  .gitattributes  .gitignore  .quality-budget.json  .version-bump.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE-NOTES.md  SECURITY.md  eval-results.json  package.json  project-forge.bat  project-forge.yaml  pyproject.toml
.claude-plugin/: plugin.json
.codex-plugin/: plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  decision-drift.yml  live-agent-evals.yml  release.yml
catalog/: lifecycle.json  stacks.v1.json
compatibility/: superpowers-matrix.json
docs/: HARNESS-LOOP-DEEP-DIVE.md  PROJECT-FORGE-FULL-BREAKDOWN.md  RELEASE.md  architecture.md  compatibility.md  decision-engine.md  distribution.md  evaluation.md  inventory.md  marketplace.md  quickstart.md  showcase.md  smoke-test.md  superpowers-handoff.md  superpowers-ready.md
docs/schemas/: loop-signal.schema.json  superpowers-handoff.schema.json
evals/agent/: forge-flow.json  (+3 more)
examples/: README.md
hooks/: hooks.json
install/: codex-marketplace.personal.json  install-codex.cmd  install-codex.ps1
scripts/: audit_project.py  clean.py  cli.py  creative_brief.py  diff_decisions.py  executive_summary.py  export_handoff.py  feature_handoff.py  forge_project.py  inspect_project.py  install_test.py  migrate.py  revise_project.py  smoke_test.py  state_manager.py  superpowers_ready.py  verify_implementation.py
tests/: test_project_forge.py
(+273 files in other folders)
